Move to bootstrap with nunjucks initial commit from copied repo using GDS framwork

--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "script:tree": "tree -a -I 'node_modules|.idea|.git|.vscode'",
     "start:prod": "node app.js",
     "start:dev": "nodemon app.js",
-    "start:browserSync": "browser-sync start --proxy \"localhost:8080\" --files \"views/**/*.njk, public/css/*.css, public/js/*.js\"",
+    "start:browserSync": "browser-sync start --proxy \"localhost:8080\" --files \"views/**/*.njk, public/css/*.css, config/*.json, public/js/*.js\"",
     "start:js": "webpack --watch --mode development",
     "sass:watch": "sass --watch src/scss/main.scss:public/css/main.css",
     "dev": "concurrently \"npm run start:dev\" \"npm run sass:watch\" \"npm run start:js\"",
@@ -24,7 +24,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "govuk-frontend": "^5.1.0",
+    "bootstrap": "^5.3.3",
     "cors": "^2.8.5",
     "dotenv": "^16.3.2",
     "express": "^4.18.2",
