--- a/config/siteConfig.json
+++ b/config/siteConfig.json
@@ -2,7 +2,11 @@
   "mainNav": [
     { "label": "Home", "href": "/" },
     { "label": "About", "href": "/about" },
-    { "label": "Thoughts", "href": "/thoughts" },
+    { "label": "Contact", "href": "/contact" }
+  ],
+  "footerNav": [
+    { "label": "Privacy Policy", "href": "/privacy-policy" },
+    { "label": "Terms of Service", "href": "/terms-of-service" },
     { "label": "Contact", "href": "/contact" }
   ]
 }
